# lib/api-spec/openapi.yaml
@@ -922,7 +922,7 @@ components:
 
     User:
       type: object
-      required: [id, email, name, referralCode, twoFAEnabled, createdAt]
+      required: [id, email, name, referralCode, twoFAEnabled, onboardingCompleted, createdAt]
       properties:
         id:
           type: integer
@@ -934,6 +934,8 @@ components:
           type: string
         twoFAEnabled:
           type: boolean
+        onboardingCompleted:
+          type: boolean
         createdAt:
           type: string
 
@@ -942,6 +944,8 @@ components:
       properties:
         name:
           type: ["string", "null"]
+        onboardingCompleted:
+          type: boolean
 
     TwoFASetup:
       type: object
